-Added the following alternative country names: Buchsgau (Solothurn), Charolais (Chalons)
-Added Fatimid Calamity disaster with 13 associated events
-Added new mission tree for Austria with 58 missions
-Added new mission tree for Pisa with 31 missions
-Added new mission tree for Athens with 28 missions
-Overhauled and extended Sicily's mission tree
-Added triggered province modifier for the Slavic sanctuary of Rethra
-Added Mamluk rebel type
-Added decisions for the new religions
-Added event for the Yaroslavichi Triumvirate
-More German localization additions

#Changes
-Pope now has a much higher chance to recognize Trinacria's independence post-Vespers
-Vespers rebel spawns toned down slightly 
-Increased required nations limit for DoF and made AI less likely to select it
-Romansch culture now uses new male/female and dynasty names instead of Italian ones
-Changed Saint Gallen's flag
-Extensive history changes mainly in Silesia and Switzerland
-Changed Prudnik's province name to Osoblaha
-Kemetism can now be revived by owning certain Egyptian provinces
-Nerfed many prestige and tradition ideas for consistency
-Changed some trade goods modifiers
-Soldiers Household, Impressment Office and State House now combo with many VN trade goods as well
-Upped cost of Temples/Courthouses/Workshops to 150 ducats so they are no longer free upgrades (also fixes minor interface bug due to spending no money)
-Marketplaces, Barracks, Docks and Shipyards now cost 150 ducats up from 100
-Various mission modifier tweaks

#Fixes
-Small fixes for the following mission trees: Sweden, Navarra, Serbia, Swabia, Bohemia, Sicily, Venice, Denmark, Normandy, Portugal, France, Scotland, Baghdad, Holland/Netherlands, Seljuk, Prussia
-Fixed major decision bug where heretic AI PU juniors could flip their overlord's ruler and heir religions and nuke their stability
-Fixed the Support Independence agenda targeting French Fiefs thereby making it impossible