@@ -2045,53 +2045,53 @@
  vn_slz_der_kurprinz_desc: ""
 #Trebizond
  vn_tre_expel_latins_title: "Expel the Latins"
- vn_tre_expel_latins_desc: ""
+ vn_tre_expel_latins_desc: "Those treacherous Latins have destroyed the Eastern Roman Empire and will come for us as soon as they have the chance. We should force them out of Asia Minor so they don't have the opportunity."
  vn_tre_take_constantinople_title: "Take Constantinople"
- vn_tre_take_constantinople_desc: ""
+ vn_tre_take_constantinople_desc: "Constantinople, the second Rome, has fallen to the treacherous Latins! Retaking the city will be a great boost to our reputation, and will further cement our claim to the Byzantine throne."
  vn_tre_end_latinokratia_title: "End the Latinokratia"
- vn_tre_end_latinokratia_desc: ""
+ vn_tre_end_latinokratia_desc: "Thanks to the Latins, we were able to return to power in Constantinople. However, they also have our utmost contempt for the destruction of the Byzantine Empire. Let us return the favor."
  vn_tre_defeat_byzantine_claimants_title: "Defeat the Claimants"
- vn_tre_defeat_byzantine_claimants_desc: ""
+ vn_tre_defeat_byzantine_claimants_desc: "After the Fourth Crusade, several states have tried to claim the legacy of the Byzantine Empire. Not only do they lack any legitimate claims to it, they pale in comparison to our glorious nation. It is time we showed these pretenders their place."
  vn_tre_unite_chaldia_title: "Unite Chaldia"
- vn_tre_unite_chaldia_desc: ""
- vn_tre_secure_marmara_title: "Secure Marmara"
- vn_tre_secure_marmara_desc: ""
+ vn_tre_unite_chaldia_desc: "With the shattering of Byzantium after the Fourth Crusade, we now have a perfect opportunity to reclaim our birthright. However, we cannot push our claims without first securing our surroundings. We should unite Chaldia to start off."
+ vn_tre_secure_marmara_title: "Secure the Marmara"
+ vn_tre_secure_marmara_desc: "Between the Dardanelles and the Bosporus lies the Sea of Marmara, which forms a mantrap of sorts between the Mediterranean and Black Seas, limiting who enters and exits. By conquering most of its coast, we should be able to regulate which ships travel to and from the Euxine and the Aegean."
  vn_tre_finish_nicenes_title: "Finish the Nicenes"
- vn_tre_finish_nicenes_desc: ""
+ vn_tre_finish_nicenes_desc: "Even after losing Nicaea itself, the so-called Nicene 'Empire' still refuses to submit to our mighty nation. It seems we must teach them of our power the hard way."
  vn_tre_anatolia_is_ours_title: "Anatolia Secured"
- vn_tre_anatolia_is_ours_desc: ""
- vn_tre_komnenos_restoration_title: "Komnenid Restoration"
- vn_tre_komnenos_restoration_desc: ""
+ vn_tre_anatolia_is_ours_desc: "With the Sultan of Rûm defeated, the false Nicene 'Emperor' swept aside, and the Latins booted back to Europe, there are no other foreign powers to readily interfere with our plans. Anatolia shall be ours for the taking!"
+ vn_tre_komnenos_restoration_title: "Komnenoi Restoration"
+ vn_tre_komnenos_restoration_desc: "We have reclaimed much of the former Byzantine lands and are foremost among the successors of Byzantium. Our kin shall rule the Eastern Roman Empire once again."
  vn_tre_retake_theodosiopolis_title: "Retake Theodosiopolis"
- vn_tre_retake_theodosiopolis_desc: ""
+ vn_tre_retake_theodosiopolis_desc: "One of our main goals is to send the Turks packing. However, given Rûm's influence, it would be unwise to do so immediately. We should instead conquer the small sultanates around Erzurum and use their land as a staging post against the Turks."
  vn_tre_grab_galatia_title: "Grab Galatia"
- vn_tre_grab_galatia_desc: ""
+ vn_tre_grab_galatia_desc: "By taking Galatia, we can acquire a further foothold against the Turks. It isn't a very rich region, but its strategic position is valuable nonetheless."
  vn_tre_conquer_phrygia_title: "Conquer Phrygia"
- vn_tre_conquer_phrygia_desc: ""
+ vn_tre_conquer_phrygia_desc: "Phrygia, while not an integral part of the Eastern Roman Empire, is important enough that the Turks shouldn't have their hands on it."
  vn_tre_crush_the_turks_title: "Crush the Turks"
- vn_tre_crush_the_turks_desc: ""
+ vn_tre_crush_the_turks_desc: "Now that we have sufficiently weakened them, we can cut down Turkish influence once and for all. The Greeks shall control Asia once more."
  vn_tre_convert_asia_minor_title: "Convert Asia Minor"
- vn_tre_convert_asia_minor_desc: ""
+ vn_tre_convert_asia_minor_desc: "When the Turks invaded Asia Minor, they displaced the native Greeks and brought with them alien and heathenous ways. Now that we have forced the Turks out of Asia Minor, we can begin to return the [Root.Religion.GetName] faith to Anatolia."
  vn_tre_build_euxine_fleet_title: "Build a Euxine Fleet"
- vn_tre_build_euxine_fleet_desc: ""
+ vn_tre_build_euxine_fleet_desc: "Being a coastal nation, it is important for us to have a strong navy, doubly so considering our overseas possessions. We should expand our fleet in the Euxine Sea."
  vn_tre_take_colchis_title: "Overrun Colchis"
- vn_tre_take_colchis_desc: ""
+ vn_tre_take_colchis_desc: "Formerly part of the Roman province of Armenia, Colchis lies just east of us. As Emperor of the Lazes, it is our right to own the region, also known as Lazica."
  vn_tre_annex_iberia_title: "Annex Iberia"
- vn_tre_annex_iberia_desc: ""
+ vn_tre_annex_iberia_desc: "Trebizond was originally able to gain independence thanks to the Georgians' assistance, and we were even able to subordinate them for a bit. However, our relationship has flipped. It is high time we welcomed our friends in Georgia back into the fold."
  vn_tre_connect_cherson_title: "Connect Cherson"
- vn_tre_connect_cherson_desc: ""
+ vn_tre_connect_cherson_desc: "Though we have managed to maintain control of Cherson and our other Crimean possessions, it would be in our best interest to connect them to the mainland. In addition to increasing our control over the area, it would also be a boon to our Black Sea trade."
  vn_tre_build_up_trebizond_title: "Develop Pontus"
- vn_tre_build_up_trebizond_desc: ""
+ vn_tre_build_up_trebizond_desc: "Though harsh and mountainous, Pontus is our homeland. It would be wise to make sure its cities are growing and its roads are maintained."
  vn_tre_dominate_black_sea_trade_title: "Black Sea Trade"
- vn_tre_dominate_black_sea_trade_desc: ""
+ vn_tre_dominate_black_sea_trade_desc: "Much of the trade in the Black Sea passes through us at one point. We should ideally be controlling the flow of trade in the Black Sea completely; let us assume more control over trade by whatever means."
  vn_tre_major_ports_title: "Major Ports"
- vn_tre_major_ports_desc: ""
+ vn_tre_major_ports_desc: "The city of Trebizond is a major stop for traders in the Black Sea. We should improve the docks and lighthouses across our nation so that sailors may never lose sight of our coasts."
  vn_tre_silk_road_trade_title: "Silk Road's Riches"
- vn_tre_silk_road_trade_desc: ""
+ vn_tre_silk_road_trade_desc: "Trebizond is a major city on the Silk Road and a common place of trade between Europeans and Asians. However, it isn't major enough for our liking; let us divert some trade from other towns along the Silk Road to Trebizond."
  vn_tre_byzantine_architecture_title: "Byzantine Architecture"
- vn_tre_byzantine_architecture_desc: ""
+ vn_tre_byzantine_architecture_desc: "During the rule of Manuel I, the Hagia Sophia was built outside of Trebizond. The cathedral is one of the greatest examples of Byzantine architecture, with a high central dome supported by several arches and mosaics. Let us show off our unique architecture in this way."
  vn_tre_jewel_on_black_sea_title: "Jewel on the Black Sea"
- vn_tre_jewel_on_black_sea_desc: ""
+ vn_tre_jewel_on_black_sea_desc: "Trebizond has grown substantially under our control, and we should develop it even further. Given time, it could surpass Constantinople in grandeur and become a beacon in the east. Our glory will be written of for ages to come as a result."
 #Events
 #BURGUNDY
  vn_missions.52.t: "A New Capital?"
