@@ -116,14 +116,22 @@ vn_tre_missions_slot_2 = {
         position = 1
         required_missions = {  }
         provinces_to_highlight = {
-            region = chaldia_region
+            OR = {
+                area = polemonion_area
+                area = trebizond_area
+            }
             OR = {
                 NOT = { owned_by = ROOT }
                 NOT = { is_core = ROOT }
             }
         }
         trigger = {
-            chaldia_region = {
+            polemonion_area = {
+                type = all
+                owned_by = ROOT
+                is_core = ROOT
+            }
+            trebizond_area = {
                 type = all
                 owned_by = ROOT
                 is_core = ROOT
