@@ -10,6 +10,7 @@
 -Added new mission tree for Austria with 58 missions
 -Added new mission tree for Pisa with 31 missions
 -Added new mission tree for Athens with 28 missions
+-Added new mission tree for Trebizond with 24 missions
 -Overhauled and extended Sicily's mission tree
 -Added triggered province modifier for the Slavic sanctuary of Rethra
 -Added Mamluk rebel type
